<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/instrucciones"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/dNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dia"
        android:layout_column="0"
        android:layout_row="1"
        android:inputType="number"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"

        />
    <Spinner
        android:id="@+id/mNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:entries="@array/meses"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        />
    <EditText
        android:id="@+id/aNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="1"
        android:hint="@string/anho"
        android:inputType="number"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        />
    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_columnSpan="3"
        android:layout_marginTop="40dp"
        android:layout_marginStart="100dp"
        />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/resultado"
        android:textSize="16sp" />

</GridLayout>









